Segundo Commit - estrutura inicial

--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
     <!-- Dashboards -->
     <section class="section section-dark">
         <div class="container">
-            <h2 class="section-title">Dashboards Específicos</h2>
+          <img src="imgs/fundo principais.png" alt="dashboard-image" class="dashboard-main-image">
+            <h2 class="section-title">NOSSA PLATAFORMA</h2>
+            <p class="section-subtitle">
+              Uma solução completa que integra todas as necessidades 
+              da gestão escolar em uma uma única plataforma
+            </p>
             <div class="dashboard-grid">
                 <div class="dashboard-card">
                     <div class="dashboard-image">📊</div>
