Juju: pronto para subir na main

--- a/alunos/CodigoAlunos/base.html
+++ b/alunos/CodigoAlunos/base.html
@@ -90,7 +90,7 @@
             <!-- Dashboard Grid -->
             <div class="dashboard-grid">
                 <!-- Boletim Escolar Widget -->
-                <div class="widget boletim-widget">
+             <a href="boletim.html"> <section><div class="widget boletim-widget">
                     <h3 class="widget-title">Boletim Escolar</h3>
                     <div class="boletim-content">
                         <div class="boletim-row">
@@ -129,10 +129,10 @@
                             <span class="status status-approved">aprovado</span>
                         </div>
                     </div>
-                </div>
+                </div></section></a>
 
                 <!-- Calendar Widget -->
-                <div class="widget calendar-widget">
+               <a href="calendario.html"><section><div class="widget calendar-widget">
                     <h3 class="widget-title">Outubro 2025
                     </h3>
                     <div class="calendar">
@@ -179,11 +179,11 @@
                             <div class="day">31</div>
                         </div>
                     </div>
-                </div>
+                </div></section></a>
 
                 <!-- Frequência Widget -->
-                <div class="widget frequencia-widget">
-                    <a href="frenquencia.html"><h3 class="widget-title">85% Frequência Escolar</h3></a>
+                <a href="frenquencia.html"><section><div class="widget frequencia-widget">
+                    <h3 class="widget-title">85% Frequência Escolar</h3>
                     <div class="chart-container">
                         <svg class="pie-chart" viewBox="0 0 100 100">
                             <circle cx="50" cy="50" r="40" fill="none" stroke="#5DADE2" stroke-width="20" stroke-dasharray="251.2 0" transform="rotate(-90 50 50)"></circle>
@@ -191,11 +191,11 @@
                         </svg>
                         <div class="chart-label">85%</div>
                     </div>
-                </div>
+                </div></section></a>
 
                 <!-- Horário Widget -->
-                <div class="widget horario-widget">
-                    <a href="horario.html"><h3 class="widget-title">Horário</h3></a>
+                <a href="horario.html"><section><div class="widget horario-widget">
+                    <h3 class="widget-title">Horário</h3>
                     <div class="horario-content">
                         <div class="horario-row">
                             <span class="time">7:00</span>
@@ -211,10 +211,11 @@
                         </div>
                         <div class="horario-row">
                             <span class="time">9:30</span>
-                            <span class="subject">Intervalo</span>
+                            <span class="subject">Intervalo</span>   
+                               
                         </div>
                     </div>
-                </div>
+                </div></section></a>
 
                 <!-- Avisos Escolares Widget -->
                 <div class="widget avisos-widget">
