--- a/alunos/CodigoAlunos/boletim.html
+++ b/alunos/CodigoAlunos/boletim.html
@@ -29,7 +29,7 @@
                 </a>
                 <a href="boletim.html" class="nav-item active">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2H5a2 2 0 0 1-2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
                     </svg>
                     Boletim Escolar
@@ -45,7 +45,7 @@
                 </a>
                 <a href="configuracoes.html" class="nav-item">
                     <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
-  Configuração
+                    Configuração
                 </a>
             </nav>
             
@@ -94,6 +94,13 @@
                             </svg>
                             Baixar
                         </button>
+                        <a href="frenquencia.html" class="btn-secondary" style="text-decoration: none;">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M9 11l3 3L22 4"></path>
+                                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"></path>
+                            </svg>
+                            Frequência Escolar
+                        </a>
                     </div>
                 </div>
 
@@ -262,7 +269,7 @@
                         <div class="chart-legend">
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #003366;"></div>
-                                <span>3º desempenho</span>
+                                <span>1º desempenho</span>
                             </div>
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #5DADE2;"></div>
@@ -270,7 +277,7 @@
                             </div>
                             <div class="legend-item">
                                 <div class="legend-color" style="background-color: #A8D5E2;"></div>
-                                <span>1º desempenho</span>
+                                <span>3º desempenho</span>
                             </div>
                         </div>
                     </div>
