--- a/alunos/CodigoAlunos/horario.html
+++ b/alunos/CodigoAlunos/horario.html
@@ -11,10 +11,8 @@
     <div class="horario-page">
         <!-- Top Bar -->
         <div class="top-bar">
-            <button class="back-btn">
-                <a href="base.html"><svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"></a>
-                    <path d="M19 12H5M12 19l-7-7 7-7"/>
-                </svg>
+            <button class="back-button">
+                <a href="base.html"><img src="imgs/seta-para-a-direita-removebg-preview.png" alt=""></a>
             </button>
             
             <div class="school-info">
@@ -77,7 +75,7 @@
                         <td></td>
                     </tr>
                     <tr class="intervalo-row">
-                        <td class="time-cell">9:30</td>
+                        <td class="time-intervalo">9:30</td>
                         <td colspan="5" class="intervalo-cell">Intervalo</td>
                     </tr>
                     <tr>
