Para resolver em casa

--- a/alunos/CodigoAlunos/base.html
+++ b/alunos/CodigoAlunos/base.html
@@ -45,6 +45,10 @@
                     </svg>
                     Calendário
                 </a>
+                 <a href="horario.html" class="nav-item">
+                    <img src="imgs/horario icone.svg" alt="">
+                    Horários
+                </a>
                <a href="configuracoes.html" class="nav-item">
                     <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
   Configuração </a>
