--- a/alunos/CodigoAlunos/boletim.html
+++ b/alunos/CodigoAlunos/boletim.html
@@ -20,16 +20,17 @@
                 </div>
             </div>
             
-            <nav class="nav-menu">
-                <a href="base.html" class="nav-item">
+           <nav class="nav-menu">
+                <!-- Updated navigation link to base.html -->
+                <a href="base.html" class="nav-item active">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                     </svg>
                     Visão Geral
                 </a>
-                <a href="boletim.html" class="nav-item active">
+                <a href="boletim.html" class="nav-item">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2H5a2 2 0 0 1-2-2V8z"></path>
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
                         <polyline points="14 2 14 8 20 8"></polyline>
                     </svg>
                     Boletim Escolar
@@ -43,10 +44,18 @@
                     </svg>
                     Calendário
                 </a>
-                <a href="configuracoes.html" class="nav-item">
-                    <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
-                    Configuração
+                 <a href="horario.html" class="nav-item active">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                        <line x1="16" y1="2" x2="16" y2="6"></line>
+                        <line x1="8" y1="2" x2="8" y2="6"></line>
+                        <line x1="3" y1="10" x2="21" y2="10"></line>
+                    </svg>
+                    Horários
                 </a>
+               <a href="configuracoes.html" class="nav-item">
+                    <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
+  Configuração </a>
             </nav>
             
             <button class="logout-btn">
