paginas professor e coordenação em django

--- a/gestao-alunos-avancada.html
+++ b/gestao-alunos-avancada.html
@@ -24,8 +24,8 @@ Alcantara</span>
             </div>
             <nav class="sidebar-nav">
                 <a href="dashboard-coordenacao.html" class="nav-item"><i class="ph-bold ph-house"></i> <span>Dashboard</span></a>
-                <a href="#" class="nav-item active"><i class="ph-bold ph-student"></i> <span>Alunos</span></a>
-                <a href="#" class="nav-item"><i class="ph-bold ph-chalkboard-teacher"></i> <span>Professores</span></a>
+                <a href="gestao-alunos-avancada.html" class="nav-item active"><i class="ph-bold ph-student"></i> <span>Alunos</span></a>
+                <a href="gestao-professores.html" class="nav-item"><i class="ph-bold ph-chalkboard-teacher"></i> <span>Professores</span></a>
                 <a href="#" class="nav-item"><i class="ph-bold ph-book-open"></i> <span>Turmas</span></a>
                 <a href="#" class="nav-item"><i class="ph-bold ph-chart-line-up"></i> <span>Relatórios</span></a>
                 <a href="#" class="nav-item"><i class="ph-bold ph-calendar"></i> <span>Calendário</span></a>
