--- a/alunos/CodigoAlunos/base.html
+++ b/alunos/CodigoAlunos/base.html
@@ -45,13 +45,19 @@
                     </svg>
                     Calendário
                 </a>
-                 <a href="horario.html" class="nav-item">
-                    <img src="imgs/horario icone.svg" alt="">
-                    Horários
-                </a>
+                <a href="horario.html" class="nav-item">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="10"></circle>
+        <polyline points="12 6 12 12 16 14"></polyline>
+    </svg>
+    Horários
+</a>
+
                <a href="configuracoes.html" class="nav-item">
                     <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
-  Configuração </a>
+  Configurações 
+</a>
             </nav>
             
             <button class="logout-btn">
@@ -71,6 +77,9 @@
                 <h1 class="page-title">Dashboard Aluno</h1>
                 <div class="header-right">
                     <button class="notification-btn">
+                        <div class="notification-panel hidden">
+    <div class="notif-list" id="notifList"></div>
+</div>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
@@ -187,7 +196,7 @@
 
                 <!-- Frequência Widget -->
                 <a href="frenquencia.html"><section><div class="widget frequencia-widget">
-                    <h3 class="widget-title">85% Frequência Escolar</h3>
+                    <h3 class="widget-title">Frequência Escolar</h3>
                     <div class="chart-container">
                         <svg class="pie-chart" viewBox="0 0 100 100">
                             <circle cx="50" cy="50" r="40" fill="none" stroke="#5DADE2" stroke-width="20" stroke-dasharray="251.2 0" transform="rotate(-90 50 50)"></circle>
@@ -234,7 +243,7 @@
                         <div class="aviso-item">
                             <div class="aviso-date">
                                 <div class="date-day">25</div>
-                                <div class="date-month">Out</div>
+                                <div class="date-month">Nov</div>
                             </div>
                             <div class="aviso-text">
                                 <div class="aviso-title">Seminário de Biologia</div>
@@ -244,7 +253,7 @@
                         <div class="aviso-item">
                             <div class="aviso-date">
                                 <div class="date-day">30</div>
-                                <div class="date-month">Out</div>
+                                <div class="date-month">Nov</div>
                             </div>
                             <div class="aviso-text">
                                 <div class="aviso-title">Prova de Matemática</div>
