--- a/alunos/CodigoAlunos/configuracoes.html
+++ b/alunos/CodigoAlunos/configuracoes.html
@@ -43,6 +43,14 @@
                     </svg>
                     Calendário
                 </a>
+                <a href="horario.html" class="nav-item">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="10"></circle>
+        <polyline points="12 6 12 12 16 14"></polyline>
+    </svg>
+    Horários
+</a>
                <a href="configuracoes.html" class="nav-item active">
                     <img src="imgs/configuracao-removebg-preview.png" alt="Configurações" class="config-icon">
   Configuração </a>
@@ -58,13 +66,15 @@
             </button>
         </aside>
 
-        <!-- Main Content -->
-        <main class="main-content">
+         <main class="main-content">
             <!-- Header -->
             <header class="header">
-                <h1 class="page-title">Aluno Configurações</h1>
+                <h1 class="page-title">Dashboard Aluno</h1>
                 <div class="header-right">
                     <button class="notification-btn">
+                        <div class="notification-panel hidden">
+    <div class="notif-list" id="notifList"></div>
+</div>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
